--- a/Dimensionality_Reduction.ipynb
+++ b/Dimensionality_Reduction.ipynb
@@ -54,7 +54,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Author: Kapil Chauhan <br>\n",
+        "Author: [Kapil Chauhan](https://github.com/kapilnchauhan77) <br>\n",
         "Data Source: http://archive.ics.uci.edu/ml/datasets/Statlog+%28Vehicle+Silhouettes%29"
       ]
     },
