--- a/Dimensionality_Reduction.ipynb
+++ b/Dimensionality_Reduction.ipynb
@@ -42,6 +42,7 @@
         "colab_type": "text"
       },
       "source": [
+        "Open in [Colab}(https://colab.research.google.com/drive/1hqKXyE6OmmJlL4o5xwLQDMi04Y_GZzuU) <br>\n",
         "Author: [Kapil Chauhan](https://github.com/kapilnchauhan77) <br>\n",
         "Data Source: http://archive.ics.uci.edu/ml/datasets/Statlog+%28Vehicle+Silhouettes%29"
       ]
